welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method getCouleurSol: ()java.awt.Color
		tab(i) = getCouleurSol(c)
                                      ^Array1:15: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
		setCouleurBrosse() == tab(i)
                                ^